@@ -31,6 +31,9 @@ placeholder.notinteam: 'false'
 placeholder.noTitle: ''
 placeholder.hasHome: 'true'
 placeholder.noHome: 'false'
+placeholder.teamChat: 'Team Chat'
+placeholder.globalChat: 'Global Chat'
+placeholder.allyChat: 'Ally Chat'
 prefix.owner: ' **'
 prefix.admin: ' *'
 prefix.default: ' '
